--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@rails/webpacker": "^5.1.1",
     "axios": "^0.19.1",
-    "browser-sync": "^2.26.7",
+    "browser-sync": "^2.26.12",
     "bulma": "^0.8.2",
-    "core-js": "^3.6.3",
+    "core-js": "3",
     "dotenv": "^8.2.0",
     "npm-check-updates": "^4.1.2",
     "vue-loader": "^15.9.1",
