Moved theme processing to worker.

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -29,9 +29,15 @@
     cron: '0 * * * * *'
     class: Notify::SlacksJob
     queue: notifies
+  themes_job:
+    enabled: true
+    cron: '0 * * * * *'
+    class: ThemesJob
+    queue: themes
 :concurrency: 1
 :queues:
   - crawlers
   - notifies
   - mecab_dics
   - sitemaps
+  - themes
