--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,12 @@ networks:
     driver: bridge
 services:
   redis:
-    container_name: redis
+    container_name: ${NAMESPACE}_redis
     image: 'redis'
     networks:
       - app-tier
   mongodb:
-    container_name: mongodb
+    container_name: ${NAMESPACE}_mongodb
     image: mongo
     restart: always
     networks:
@@ -19,7 +19,7 @@ services:
   web:
     tty: true
     stdin_open: true
-    container_name: web
+    container_name: ${NAMESPACE}_web
     build:
       context: .
       dockerfile: Dockerfile
@@ -36,7 +36,7 @@ services:
   worker:
     tty: true
     stdin_open: true
-    container_name: worker
+    container_name: ${NAMESPACE}_worker
     image: newsdictio
     working_dir: /var/www/docker
     command: "bash src/provisioning/startup/worker/startup.sh development"
@@ -49,7 +49,7 @@ services:
   bundle:
     tty: true
     stdin_open: true
-    container_name: bundle
+    container_name: ${NAMESPACE}_bundle
     image: newsdictio
     volumes:
       - ./:/var/www/docker:cached
@@ -60,8 +60,8 @@ services:
   asciidoctor:
     tty: true
     stdin_open: true
-    container_name: asciidoctor
-    image: newsdict/asciidoctor.live:v0.1.16
+    container_name: ${NAMESPACE}_asciidoctor
+    image: newsdict/asciidoctor.live:v0.1.18
     command: "bash src/provisioning/startup/asciidoctor/startup.sh development"
     volumes:
       - ./:/var/www/docker:cached
@@ -74,8 +74,8 @@ services:
   guard:
     tty: true
     stdin_open: true
-    container_name: guard
-    image: newsdict/asciidoctor.live:v0.1.16
+    container_name: ${NAMESPACE}_guard
+    image: newsdict/asciidoctor.live:v0.1.18
     command: "bash src/provisioning/startup/guard/startup.sh development"
     volumes:
       - ./:/var/www/docker:cached
@@ -86,8 +86,8 @@ services:
   browser-sync:
     tty: true
     stdin_open: true
-    container_name: browser-sync
-    image: newsdict/asciidoctor.live:v0.1.16
+    container_name: ${NAMESPACE}_browser-sync
+    image: newsdict/asciidoctor.live:v0.1.18
     command: "bash src/provisioning/startup/browser-sync/startup.sh development"
     volumes:
       - ./:/var/www/docker:cached
