--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@rails/webpacker": "^5.1.1",
     "axios": "^0.19.1",
     "browser-sync": "^2.26.12",
-    "bulma": "^0.8.2",
+    "bulma": ">=0.9.0",
     "core-js": "3",
     "dotenv": "^8.2.0",
     "npm-check-updates": "^4.1.2",
