--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -51,7 +51,7 @@ development:
 
   # Reference: https://webpack.js.org/configuration/dev-server/
   dev_server:
-    https: false
+    https: true
     host: 0.0.0.0
     port: 3035
     public: 0.0.0.0:3035
