placed `manifest.js` under the theme.

--- a/.env-test
+++ b/.env-test
@@ -32,3 +32,6 @@ WEBPACK_DEV_SERVER_PUBLIC=1.2.3.4
 # Logging to STDOUT
 # If you do not want to output the log, please comment out
 RAILS_LOG_TO_STDOUT=1
+
+# asciidoctor-skins css filename
+asciidoctor_theme=boot-darkly
