--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -24,9 +24,15 @@
     cron: '0 * * * * *'
     class: NotifiesJob
     queue: notifies
+  collect_tags_job:
+    enabled: true
+    cron: '0 */5 * * * *'
+    class: Collects::CollectTagsJob
+    queue: collects
 :concurrency: 1
 :queues:
   - crawlers
   - notifies
   - mecab_dics
   - sitemaps
+  - collects
