--- a/.env-test
+++ b/.env-test
@@ -13,6 +13,9 @@ default_locale=ja
 # Maximum number of admin's members
 MAX_MEMBER_COUNT=2
 
+# sender email
+SENDER_EMAIL=notify@dummy.com
+
 # super_admin email
 ADMIN_USER_EMAIL=dummy@dummy.com
 
