--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@rails/webpacker": "^5.1.1",
-    "axios": "^0.19.1",
+    "axios": "^0.20.0",
     "browser-sync": "^2.26.12",
     "bulma": ">=0.9.0",
     "core-js": "3",
     "dotenv": "^8.2.0",
-    "npm-check-updates": "^4.1.2",
+    "npm-check-updates": "^9.0.1",
     "vue-loader": "^15.9.1",
     "vue-template-compiler": "^2.6.11",
     "vue2": "^1.0.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^5.1.4"
   },
   "devDependencies": {
+    "lodash.throttle": "^4.1.1",
     "webpack-dev-server": "^3.10.1"
   }
 }
