--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
-    "@rails/webpacker": "^5.1.1",
+    "@rails/webpacker": "5.2.1",
     "axios": "^0.20.0",
     "browser-sync": "^2.26.12",
     "bulma": ">=0.9.0",
@@ -21,6 +21,6 @@
   },
   "devDependencies": {
     "lodash.throttle": "^4.1.1",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "^3.11.0"
   }
 }
