--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,9 @@
 # Namespace for mongodb, redis
 NAMESPACE=newsdict
 
+# FQDN for production
+PROD_FQDN=https://newsdict.jp
+
 # Local domain
 LOCAL_DOMAIN=newsdict.jp
 
