--- a/.github/workflows/UnitTest.yml
+++ b/.github/workflows/UnitTest.yml
@@ -12,13 +12,12 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: set environment variables
-      uses: allenevans/set-env@v1.0.0
-      with:
-        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-        SLACK_ICON: https://github.com/rtCamp.png?size=48
-        SLACK_CHANNEL: actions
-        SLACK_USERNAME: Github Actions
-
+      run: |
+        echo "SLACK_WEBHOOK=${{ secrets.SLACK_WEBHOOK }}" >> $GITHUB_ENV
+        echo "SLACK_ICON=https://github.com/rtCamp.png?size=48" >> $GITHUB_ENV
+        echo "SLACK_CHANNEL=actions" >> $GITHUB_ENV
+        echo "SLACK_USERNAME=Github Actions" >> $GITHUB_ENV
+        
     - name: Install Docker Compose
       run: |
         set -xe
