--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -26,7 +26,7 @@
     queue: notifies
   collect_tags_job:
     enabled: true
-    cron: '0 */5 * * * *'
+    cron: '0 30 * * * *'
     class: CollectTagsJob
     queue: collects
   schedules_job:
