--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-loader": "^15.9.1",
     "vue-template-compiler": "^2.6.11",
     "vue2": "^1.0.0",
-    "webpack-merge": "^5.1.4"
+    "webpack-merge": "^5.1.4",
+    "bulma-timeline": "^3.0.4"
   },
   "devDependencies": {
     "lodash.throttle": "^4.1.1",
