--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "@rails/webpacker": "5.2.1",
     "axios": "^0.20.0",
     "browser-sync": "^2.26.12",
-    "bulma": ">=0.9.0",
+    "bulma": "^0.9.1",
+    "bulma-switch": "^2.0.0",
+    "bulma-timeline": "^3.0.4",
     "core-js": "3",
     "dotenv": "^8.2.0",
     "npm-check-updates": "^9.0.1",
     "vue-loader": "^15.9.1",
     "vue-template-compiler": "^2.6.11",
     "vue2": "^1.0.0",
-    "webpack-merge": "^5.1.4",
-    "bulma-timeline": "^3.0.4"
+    "webpack-merge": "^5.1.4"
   },
   "devDependencies": {
     "lodash.throttle": "^4.1.1",
