--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "3",
     "dotenv": "^8.2.0",
     "npm-check-updates": "^9.0.1",
+    "rails-erb-loader": "^5.5.2",
     "vue-loader": "^15.9.1",
     "vue-template-compiler": "^2.6.11",
     "vue2": "^1.0.0",
