--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "npm-check-updates": "^9.0.1",
     "rails-erb-loader": "^5.5.2",
+    "react-on-rails": "12.0.4",
     "vue-loader": "^15.9.1",
     "vue-template-compiler": "^2.6.11",
     "vue2": "^1.0.0",
