Work `/hello_world`!

--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -30,9 +30,11 @@ default: &default
     - .woff2
 
   extensions:
+    - .js.erb
     - .erb
     - .mjs
     - .js
+    - .jsx
     - .sass
     - .scss
     - .css
@@ -44,7 +46,7 @@ default: &default
     - .gif
     - .jpeg
     - .jpg
-
+    
 development:
   <<: *default
   compile: true
