--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "browser-sync": "browser-sync start --server doc --cwd doc --files '**/*' --logLevel debug"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.12.10",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@rails/webpacker": "5.2.1",
     "axios": "^0.21.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "browser-sync": "^2.26.12",
     "bulma": "^0.9.1",
     "bulma-switch": "^2.0.0",
@@ -16,6 +18,7 @@
     "core-js": "3",
     "dotenv": "^8.2.0",
     "npm-check-updates": "^9.0.1",
+    "prop-types": "^15.7.2",
     "rails-erb-loader": "^5.5.2",
     "react-on-rails": "12.0.4",
     "vue-loader": "^15.9.1",
@@ -25,6 +28,8 @@
   },
   "devDependencies": {
     "lodash.throttle": "^4.1.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "webpack-dev-server": "^3.11.0"
   },
   "version": "0.0.0"
