--- a/.github/workflows/MiniTest.yml
+++ b/.github/workflows/MiniTest.yml
@@ -15,8 +15,6 @@ jobs:
         echo "SLACK_ICON=https://github.com/rtCamp.png?size=48" >> $GITHUB_ENV
         echo "SLACK_CHANNEL=actions" >> $GITHUB_ENV
         echo "SLACK_USERNAME=Github Actions" >> $GITHUB_ENV
-        echo "COVERALLS_REPO_TOKEN=${{ secrets.COVERALLS_REPO_TOKEN }}" >> $GITHUB_ENV
-        echo "CI=true" >> $GITHUB_ENV
         
     - name: Install Docker Compose
       run: |
@@ -36,7 +34,7 @@ jobs:
     - name: rails test -v
       run: |
         set -xe
-        docker/rails test -v
+        docker/exec CI=true COVERALLS_REPO_TOKEN=${{ secrets.COVERALLS_REPO_TOKEN }} bin/rails test -v
     - name: Passed Slack Nortification
       uses: rtCamp/action-slack-notify@v2.0.0
       if: ${{ env.SLACK_WEBHOOK != null && success() }}
