--- a/.github/workflows/MiniTest.yml
+++ b/.github/workflows/MiniTest.yml
@@ -34,6 +34,8 @@ jobs:
     - name: rails test -v
       run: |
         set -xe
+        ls
+        ls bin
         docker/exec CI=true COVERALLS_REPO_TOKEN=${{ secrets.COVERALLS_REPO_TOKEN }} bin/rails test -v
     - name: Passed Slack Nortification
       uses: rtCamp/action-slack-notify@v2.0.0
