--- a/.github/workflows/MiniTest.yml
+++ b/.github/workflows/MiniTest.yml
@@ -33,7 +33,7 @@ jobs:
     - name: rails test -v
       run: |
         set -xe
-        docker/start -d web mongodb redis
+        docker/start web mongodb redis
         docker/exec CI=true COVERALLS_REPO_TOKEN=${{ secrets.COVERALLS_REPO_TOKEN }} bin/rails test -v
     - name: Passed Slack Nortification
       uses: rtCamp/action-slack-notify@v2.0.0
