--- a/.github/workflows/MiniTest.yml
+++ b/.github/workflows/MiniTest.yml
@@ -25,7 +25,6 @@ jobs:
     - name: Set up .env
       run: |
         cp .env-test .env
-
     - name: build
       run: |
         set -xe
@@ -33,7 +32,7 @@ jobs:
     - name: rails test -v
       run: |
         set -xe
-        docker/start web mongodb redis
+        docker/start -d web mongodb redis
         docker/exec CI=true COVERALLS_REPO_TOKEN=${{ secrets.COVERALLS_REPO_TOKEN }} bin/rails test -v
     - name: Passed Slack Nortification
       uses: rtCamp/action-slack-notify@v2.0.0
