--- a/.github/workflows/MiniTest.yml
+++ b/.github/workflows/MiniTest.yml
@@ -15,9 +15,6 @@ jobs:
         echo "SLACK_ICON=https://github.com/rtCamp.png?size=48" >> $GITHUB_ENV
         echo "SLACK_CHANNEL=actions" >> $GITHUB_ENV
         echo "SLACK_USERNAME=Github Actions" >> $GITHUB_ENV
-        echo "COVERALLS_REPO_TOKEN=${{ secrets.COVERALLS_REPO_TOKEN }}" >> $GITHUB_ENV
-        echo "CI=true" >> $GITHUB_ENV
-        
     - name: Install Docker Compose
       run: |
         set -xe
@@ -27,7 +24,8 @@ jobs:
     - name: Set up .env
       run: |
         cp .env-test .env
-
+        echo "COVERALLS_REPO_TOKEN=${{ secrets.COVERALLS_REPO_TOKEN }}" >> .env
+        echo "CI=true" >> .env
     - name: build
       run: |
         set -xe
