--- a/.github/workflows/MiniTest.yml
+++ b/.github/workflows/MiniTest.yml
@@ -34,6 +34,7 @@ jobs:
       run: |
         set -xe
         docker/start --abort-on-container-exit web mongodb redis &
+        export ABORT_IF_EXIT_PID=$!
         docker/rails test -v
     - name: Coveralls GitHub Action
       uses: coverallsapp/github-action@v1.1.2
