--- a/.github/workflows/MiniTest.yml
+++ b/.github/workflows/MiniTest.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main develop ]
+    branches: 
+    - main
+    - develop
 jobs:
   build:
     runs-on: ubuntu-latest
