--- a/.env-example
+++ b/.env-example
@@ -41,3 +41,6 @@ RAILS_LOG_TO_STDOUT=1
 
 # asciidoctor-skins css filename
 asciidoctor_theme=boot-darkly
+
+# For web_stat gem
+YOUTUBE_API_KEY=dummy-key
