--- a/.env-test
+++ b/.env-test
@@ -8,7 +8,7 @@ LOCAL_DOMAIN=newsdict.jp
 TIMEZONE=Tokyo
 
 # Default Locale
-default_locale=ja
+default_locale=jp
 
 # Maximum number of admin's members
 MAX_MEMBER_COUNT=2
@@ -38,3 +38,8 @@ RAILS_LOG_TO_STDOUT=1
 
 # asciidoctor-skins css filename
 asciidoctor_theme=boot-darkly
+
+# For web_stat gem
+YOUTUBE_API_KEY=dummy-key
+
+NOTIFICATION_WEBHOOK_URL=dummy-url
