Refactor the routes.

--- a/.env-test
+++ b/.env-test
@@ -8,7 +8,7 @@ LOCAL_DOMAIN=newsdict.jp
 TIMEZONE=Tokyo
 
 # Default Locale
-default_locale=jp
+default_locale=ja
 
 # Maximum number of admin's members
 MAX_MEMBER_COUNT=2
